--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "img_stegano_rs"
+name = "img_stegano"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,9 +8,9 @@ path = "./src/lib.rs"
 
 [workspace]
 members = [
-	"img_stegano_rs",
-	"img_stegano_wasm"
+	"stegano-core",
+	"stegano-wasm"
 ]
 
 [dependencies]
-img_stegano_rs_lib = {path = "./img_stegano_rs"}
+img_stegano_core = {path = "./stegano-core"}
