--- a/stegano-wasm/Cargo.toml
+++ b/stegano-wasm/Cargo.toml
@@ -12,7 +12,7 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.84"
-img_stegano_rs = {path = "../"}
+img_stegano = {path = "../"}
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
