Add simple stegano cli program

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ path = "./src/lib.rs"
 [workspace]
 members = [
 	"stegano-core",
-	"stegano-wasm"
+	"stegano-cli",
+	"stegano-wasm",
 ]
 
 [dependencies]
