--- a/stegano-wasm/Cargo.toml
+++ b/stegano-wasm/Cargo.toml
@@ -19,6 +19,7 @@ img_stegano = {path = "../"}
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
+image = "0.24.7"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
