--- a/stegano-cli/Cargo.toml
+++ b/stegano-cli/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3.26"
+clap = { version = "4.5", features = ["derive"] }
 img_stegano = {path = ".."}
 anyhow = "1.0.75"
 thiserror = "2.0.0"
