--- a/web-app/tsconfig.json
+++ b/web-app/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "pkg"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
