--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
-img_stegano = {path = ".."}
+img_stegano = { path = "../core" }
 anyhow = "1.0.75"
 thiserror = "2.0.0"
